@@ -17,6 +17,7 @@ Version 7.44 - not yet released
   - add quit button to quick menu
   - infoboxen: new setting, allow scaling of title/comment font
   - Radar / Thermalassistant Gauges: Placement to avoid InfoBoxen and Overlap
+  - Add new Infobox “Home altitude difference” (Home AltD)
 * Android
   - fix crash on startup when loading icons on ldpi screens
 
